[tool.poetry]
name = "nextcord-ormar"
version = "0.3.0"
description = "Database integration for Nextcord with Tortoise-ORM"
authors = ["Peter DeVita <mewtwo2643@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
nextcord = "^2.0"
ormar = "^0.11"
aiosqlite = "^0.17"
alembic = "^1.8"
Sphinx = {version = "^5.1", optional = true }
releases = {version = "^1.6", optional = true }

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
nxalembic = 'nextcord_ormar.nxalembic:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["Sphinx", "releases"]